add: header complete

--- a/index.html
+++ b/index.html
@@ -14,21 +14,26 @@
     <header>
         <div class="flex-container wrapper">
             <nav class="navbar container flex-container">
-                <div class="logo nav-item">logo</div>
+                <div class="logo nav-item flex-container"><img class="logo-img" src="img/logo.svg" alt="logo discord"></div>
                 <div class="menu nav-item">
                     <ul class="flex-container list-menu">
-                        <li><a href="">Link</a></li>
-                        <li><a href="">Link</a></li>
-                        <li><a href="">Link</a></li>
-                        <li><a href="">Link</a></li>
-                        <li><a href="">Link</a></li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
                     </ul>
                 </div>
-                <div class="login nav-item">login</div>
+                <div class="login nav-item"><a href="">Accedi</a></div>
             </nav>
         </div>
         <div class="hero flex-container">
-            <div class="hero-content"></div>
+            <div class="hero-content">
+                <h2 class="hero-title">Il tuo posto per parlare</h2>
+                <p class="hero-paragraph">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
+                <a class="download-mac anchor"href=""><i class="fa-solid fa-down-long"></i> Scarica per Mac</a>
+                <a class="download-windows anchor"href="">Apri Discord nel tuo browser</a>
+            </div>
         </div>
     </header>
     <!-- header -->
