add: main complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="hero flex-container">
             <div class="hero-content">
-                <h2 class="hero-title">Il tuo posto per parlare</h2>
+                <h3 class="hero-title">Il tuo posto per parlare</h3>
                 <p class="hero-paragraph">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
                 <a class="download-mac anchor"href=""><i class="fa-solid fa-down-long"></i> Scarica per Mac</a>
                 <a class="download-windows anchor"href="">Apri Discord nel tuo browser</a>
@@ -42,34 +42,62 @@
     <main>
 
         <!-- sections -->
-        <div class="white-div">
+        <div>
             <section class="section flex-container container">
-                <div class="azure-div "></div>
-                <div class="pink-div "></div>
+                <div class="big-col ">
+                    <img src="img/item1.svg" alt="">
+                </div>
+                <div class="small-col">
+                    <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi parlare della tua giornata senza intasare una chat di grupp</p>
+                </div>
             </section>
         </div>
 
-        <div class="gray-div">
+        <section class="gray-section">
             <section class="section flex-container container">
-                <div class="pink-div "></div>
-                <div class="azure-div "></div>
+                <div class="small-col">
+                    <h3>Dove trovarsi è facile</h3>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare</p>
+                </div>
+                <div class="big-col ">
+                    <img src="img/item2.svg" alt="">
+                </div>
             </section>
-        </div>
+        </section>
         
         <div>
             <section class="section flex-container container">
-                <div class="azure-div "></div>
-                <div class="pink-div "></div>
+                <div class="big-col ">
+                    <img src="img/item3.svg" alt="">
+                </div>
+                <div class="small-col ">
+                    <h3>Da pochi a un fandom</h3>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.
+                    </p>
+                </div>
             </section>
         </div>
         <!-- /sections -->
 
         <!-- main-content -->
-        <div class="gray-div">
-            <div class="section flex-container container">
-                <div class="main-box "></div>
+        <section class="gray-section">
+            <div class="last-section container">
+                <h3>Tecnologia affidabile per tenersi in contatto</h3>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Faci ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             </div>
-        </div>
+            <div class="flex-container container">
+                <div class="main-box ">
+                    <img src="img/item4-big.svg" alt="">
+                </div>
+            </div>
+            <div class="bottom-div  flex-container">
+                <div>
+                    <p>Pronto a iniziare la tua avvetura?</p>
+                    <a class="anchor"href=""><i class="fa-solid fa-down-long"></i> Scarica per Mac</a>
+                </div>
+            </div>
+        </section>
         <!-- /main-content -->
     </main>
     <!-- /main -->
