add: footer completed

--- a/index.html
+++ b/index.html
@@ -106,24 +106,72 @@
     <footer>
         <section class="first-footer-section">
             <div class="container flex-container">
-                <div class="footer-div big "></div>
-                <div class="footer-div small"></div>
-                <div class="footer-div small"></div>
-                <div class="footer-div small"></div>
-                <div class="footer-div small"></div>
+                <div class="footer-div big ">
+                    <h4>Il tuo posto per parlare</h4>
+                    <img class="italian-flag" src="img/ita.png" alt="italian flag"><span>Italiano <i class="fa-solid fa-chevron-down"></i></span>
+                    <div class="icons">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+                <div class="footer-div small">
+                    <h4>Prodotto</h4>
+                    <ul>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-div small">
+                    <h4>Compagnia</h4>
+                    <ul>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-div small">
+                    <h4>Risorse</h4>
+                    <ul>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="footer-div small">
+                    <h4>Norme</h4>
+                    <ul>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
 
         <section>
-            <div class="second-footer-section">
-                <div class="container flex-container">
+            <div class="second-footer-section container">
+                <div class="flex-container">
                     <div class="footer-div-bottom flex-container">
                         <div class="footer-logo">
-                            logo
+                            <img src="img/logo.svg" alt="">
                         </div>
-                        <button class="btn" type="button">
-                            bottone
-                        </button>
+                        <a class="sign-up" href="">Registrati</a>
                     </div>
                 </div>
             </div>
