--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <main>
 
         <!-- sections -->
+
+        <!-- section -->
         <div>
             <section class="section flex-container container">
                 <div class="big-col ">
@@ -53,8 +55,14 @@
                 </div>
             </section>
         </div>
+        <!-- /section -->
 
-        <section class="gray-section">
+        <!-- wave image background -->
+        <svg class="reverse-wave" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="rgb(255, 255, 255)"></path></svg>
+        <!-- /wave image background -->
+
+        <!-- section -->
+        <div class="gray-section">
             <section class="section flex-container container">
                 <div class="small-col">
                     <h3>Dove trovarsi è facile</h3>
@@ -64,8 +72,14 @@
                     <img src="img/item2.svg" alt="">
                 </div>
             </section>
-        </section>
-        
+        </div>
+        <!-- /section -->
+
+
+        <!-- wave image background -->
+        <svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="rgb(255 255 255)"></path></svg>
+        <!-- /wave image background -->
+
         <div>
             <section class="section flex-container container">
                 <div class="big-col ">
@@ -79,6 +93,11 @@
             </section>
         </div>
         <!-- /sections -->
+        
+
+        <!-- wave image background -->
+        <svg class="reverse-wave" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none"><path class="wavePath-haxJK1 animationPaused-2hZ4IO" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="rgb(255, 255, 255)"></path></svg>
+        <!-- /wave image background -->
 
         <!-- main-content -->
         <section class="gray-section">
