fix: spelling error small-col n2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="small-col">
                     <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
-                    <p>I server Discord sono organizzati in canali tematici in cui puoi parlare della tua giornata senza intasare una chat di grupp</p>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>
             </section>
         </div>
