--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- /wave image background -->
 
         <!-- main-content -->
-        <section class="gray-section">
+        <section class="gray-section section">
             <div class="last-section container">
                 <h3>Tecnologia affidabile per tenersi in contatto</h3>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Faci ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
