--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <!-- main-content -->
         <section class="gray-section section">
             <div class="last-section container">
-                <h3>Tecnologia affidabile per tenersi in contatto</h3>
-                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Faci ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <h3 class="container">Tecnologia affidabile per tenersi in contatto</h3>
+                <p class="container">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Faci ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
             </div>
             <div class="flex-container container">
-                <div class="main-box ">
+                <div class="main-box container ">
                     <img src="img/item4-big.svg" alt="">
                 </div>
             </div>
